Add AddCountries dialog

--- a/src/ApiGateway/SchemaGeneration/SchemaType.tt
+++ b/src/ApiGateway/SchemaGeneration/SchemaType.tt
@@ -22,7 +22,7 @@ namespace <#=_message.SchemaTypeNamespace#>
 			if (prop.IsId)
 			{
 #>
-			Field(x => x.Id, nullable: <#=prop.IsNullable.ToString().ToLower()#>, type:(typeof(IdGraphType)));
+			Field(x => x.Id, nullable: false);
 <#
 			}				
 			else if (prop.IsList)
